Thu Sep 12 22:02:59 GMT 2013  Olly Betts <olly@survex.com>

	* weight.cc: Use "" not <> to include local header weight.h.

Thu Sep 12 01:18:33 GMT 2013  Olly Betts <olly@survex.com>

	* diritor.cc,diritor.h,omindex.cc: Commit changes and exit, rather
	  than skipping the current file on most unexpected errors reading
	  directories or initialising libmagic - otherwise we can end up
	  deleting a lot of database entries on errors like EHOSTDOWN.

Tue Sep 03 01:03:33 GMT 2013  Olly Betts <olly@survex.com>

	* myhtmlparse.cc,myhtmlparse.h,omindex.cc: Add support for indexing
	  'created' time from HTML documents.

Mon Sep 03 00:23:34 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Factor out mimetype_from_ext() function.

Mon Sep 02 23:32:01 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Fix to sleep for sleep_before_opendir from now, not
	  from 1970.

Mon Sep 02 22:45:44 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Make OPT_OPENDIR_SLEEP 256 not -1, as getopt() returns
	  -1 when there are no more options.

Mon Sep 02 05:00:16 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc,docs/overview.rst: Ignore 'adm', 'cur', and 'ico' by
	  default.

Mon Sep 02 04:50:59 GMT 2013  Olly Betts <olly@survex.com>

	* datematchdecider.h: Fix filename in comment at top of file.

Thu Aug 29 23:39:14 GMT 2013  Olly Betts <olly@survex.com>

	* diritor.h: Mark DirectoryIterator ctor as 'explicit'.

Thu Aug 29 23:37:29 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,omindex.cc: Add omindex --opendir-sleep=SECS option to
	  allow working around problems with indexing files on Microsoft DFS
	  shares.

Thu Aug 22 22:04:11 GMT 2013  Olly Betts <olly@survex.com>

	* xlsxparse.cc: Handle pre-defined numfmtid codes for dates.

Wed Jul 17 06:15:27 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc,xlsxparse.cc,xlsxparse.h: Fix detection of cells with a
	  date format to work with xlsx files other than my first example.
